--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts",
+    "start": "bun src/index.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "bun dist/index.js"
   },
   "keywords": [
     "kajian",
