--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.4.2"
   },
   "dependencies": {
+    "@types/safe-json-stringify": "^1.1.5",
     "mysql2": "^3.9.2",
     "sqlx-ts": "^0.11.0",
     "winston": "^3.12.0"
