--- a/package.json
+++ b/package.json
@@ -27,8 +27,13 @@
   },
   "dependencies": {
     "@types/safe-json-stringify": "^1.1.5",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "checkeasy": "^1.1.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.9.2",
     "sqlx-ts": "^0.11.0",
+    "uuidv7": "^1.0.1",
     "winston": "^3.12.0"
   }
 }
